infrastructure/network.yml
Description: CD12352 - Infrastructure as Code Project - Network

Parameters:

  projectName:
    Description: Name of the project
    Type: String
    Default: DefaultProject

  cidrVPC: 
    Description: IP range of the VPC (in CIDR notation)
    Type: String
    Default: 10.0.0.0/16

  cidrPublicSubnet1:
    Description: IP range of the public subnet 1 (in AZ 1) in CIDR notation 
    Type: String
    Default: 10.0.0.0/24

  cidrPublicSubnet2:
    Description: IP range of the public subnet 2 (in AZ 2) in CIDR notation 
    Type: String
    Default: 10.0.1.0/24

  cidrPrivateSubnet1:
    Description: IP range of the private subnet 1 (in AZ 1) in CIDR notation 
    Type: String
    Default: 10.0.2.0/24

  cidrPrivateSubnet2:
    Description: IP range of the private subnet 2 (in AZ 2) in CIDR notation 
    Type: String
    Default: 10.0.3.0/24

Resources:

  VPC: 
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref cidrVPC
      EnableDnsHostnames: true
      Tags: 
        - Key: Name 
          Value: !Ref projectName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref projectName
      
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref cidrPublicSubnet1
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name 
          Value: !Sub ${projectName} Public Subnet (AZ1)

  PublicSubnet2: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref cidrPublicSubnet2
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name 
          Value: !Sub ${projectName} Public Subnet (AZ2)

  PrivateSubnet1: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref cidrPrivateSubnet1
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name 
          Value: !Sub ${projectName} Private Subnet (AZ1)

  PrivateSubnet2: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref cidrPrivateSubnet2
      MapPublicIpOnLaunch: false
      Tags: 
        - Key: Name 
          Value: !Sub ${projectName} Private Subnet (AZ2)

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties: 
      Domain: VPC

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: VPC

  NatGateway1: 
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2: 
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: !Sub ${projectName} public route table

  DefaultPublicRoute: 
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2
  
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: !Sub ${projectName} private route table 1

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: !Sub ${projectName} private route table 2

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

Outputs:

  VPC: 
    Description: A reference to the created VPC
    Value: !Ref VPC
    Export:
      Name: !Sub ${projectName}-VPCID

  PrivateSubnets:
    Description: List of the private subnets of the Udagram cloud infrastructure
    Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
    Export:
      Name: !Sub ${projectName}-PRIV-NETS

  PublicSubnet1:
    Description: Public subnet 1 of the Udagram cloud infrastructure
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${projectName}-PUB1-SN

  PublicSubnet2:
    Description: Public subnet 2 of the Udagram cloud infrastructure
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub ${projectName}-PUB2-SN
